updating annotation files

--- a/final_assemblies/annotation/README
+++ b/final_assemblies/annotation/README
@@ -31,4 +31,11 @@ Trinotate.sqlite		the initialized annoatation database to be used ith Trinotate
 
 You should continue with the Trinotate steps, using the transcripts.main.fa and transcripts.reformated.aa files.  DO NOT continue with the *main.renamed* files, as these will not import into the database correctly.
 
+You can run these steps using the provided scripts:
+1) Run all RunTrintotate* scripts, except RunTrinotate_load.sh at the same time.  These compute all the different evidence for annotation and are not interdependent.
+2) Run RunTrinotate_load.sh.  This will load all finished information into your database and provide you with a report.xls - with a line for each transcript and annotation evidence found.
+3) If you want to pull specific columns, you will have to remove the spaces within the report - I usually do this with the following command:
+    sed 's/\ /_/g' report.xls > report.reformated.xls
+
+Then you go about filtering out things that look like contamination (help on that is in development) and getting a first look at what any differentially expressed genes might be!
 
