adding 2019 features: single/paired, version, citations, annotation, etc.

--- a/final_assemblies/README
+++ b/final_assemblies/README
@@ -25,3 +25,4 @@ Completeness
 	BUSCO – works on transcriptomes too!
 	Blast to a similar organism (how much overlap?)
 
+Evigenes Documentation: http://arthropods.eugenes.org/EvidentialGene/trassembly.html
