--- a/input_files/README
+++ b/input_files/README
@@ -1,4 +1,4 @@
-You will need to combine all your read files into left.fq and right.fq, as these are going to be the input files for the assemblers.  These can be trimmed reads, or if you feel confident (run fastqc), untrimmed reads.
+For paired, You will need to combine all your read files into left.fq and right.fq, as these are going to be the input files for the assemblers.  These can be trimmed reads, or if you feel confident (run fastqc), untrimmed reads.
 
 An easy way to do this is to put all the files in this input_files directory, then run:
 cat *_1.fq >> left.fq
@@ -19,6 +19,8 @@ cat file3_read2.fq >> right.fq
 cat file4_read2.fq >> right.fq
 
 MAKE SURE YOU USE ">>" and not ">" - you will lose data if you use only one arrow!!!
+
+For unpaired, you just need name the file reads.fq
 
 Then, run the RunTrinity.normalization.sh script.  This will output two files to this directory, left-norm.fq and right-norm.fq.  These will be used for all downstream analyses.  Using normalization reduces time, resources, etc without any real loss of information.
 
